[gd_scene load_steps=8 format=2]

[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/1.png" type="Texture" id=1]
[ext_resource path="res://Area_Objects/Selectable.tscn" type="PackedScene" id=2]
[ext_resource path="res://Area_Objects/Visibility.tscn" type="PackedScene" id=3]
[ext_resource path="res://Soldiers/Archer.gd" type="Script" id=4]
[ext_resource path="res://Area_Objects/Scan_Area.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interractions/Attack_Area.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 128.156

[node name="Archer" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.0580711, -20.383 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 0.310096 )
scale = Vector2( 1, 1.04464 )
polygon = PoolVector2Array( 4.286, 1.64334, 3.43225, -4.97396, -3.95271, -4.80321, -3.73927, 1.59993 )

[node name="Selectable" parent="." instance=ExtResource( 2 )]

[node name="CollisionPolygon2D" parent="Selectable" index="0"]
polygon = PoolVector2Array( -0.993858, -0.216427, -5.58147, -13.3405, -4.47812, -23.0384, -1.63264, -27.7421, 1.9097, -28.0325, 4.98747, -22.69, 5.45204, -13.1082, 1.5032, -0.274498 )

[node name="Visibility" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 0

[node name="CollisionPolygon2D" parent="Visibility" index="0"]
polygon = PoolVector2Array( -3.97421, 0.705544, 5.57468, 0.876053, 6.9388, -6.62664, -3.97421, -7.13818 )

[node name="Archer_Scan" parent="." instance=ExtResource( 5 )]
collision_mask = 20

[node name="Attack_Area" parent="." instance=ExtResource( 6 )]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Area"]
shape = SubResource( 1 )
[connection signal="mouse_entered" from="Selectable" to="." method="_on_Selectable_mouse_entered"]
[connection signal="mouse_exited" from="Selectable" to="." method="_on_Selectable_mouse_exited"]
[connection signal="area_entered" from="Archer_Scan" to="." method="_on_Archer_Scan_area_entered"]
[connection signal="area_exited" from="Archer_Scan" to="." method="_on_Archer_Scan_area_exited"]
[connection signal="area_entered" from="Attack_Area" to="." method="_on_Attack_Area_area_entered"]
[connection signal="area_exited" from="Attack_Area" to="." method="_on_Attack_Area_area_exited"]

[editable path="Selectable"]

[editable path="Visibility"]

[editable path="Archer_Scan"]

[editable path="Attack_Area"]
